<resources>
    <string name="app_name">PokemonTracker</string>
    <string name="save">Save</string>
    <string name="defence">Defence</string>
    <string name="hp">HP</string>
    <string name="base_stats">Base Stats</string>
    <string name="level">Level</string>
    <string name="attack">Attack</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="unk">Unk</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="species">Species</string>
    <string name="name">Name</string>
    <string name="poke_tracker">Poke - Tracker</string>
    <string name="register_new_catch">Register New Catch</string>
    <string name="national_number">National Number</string>
    <string name="female">Female</string>
    <string name="reset">Reset</string>
</resources>